# dockathon

./: .gitignore  404.html  AICHAT.md  CLAUDE.md  Projectrequirements.md  README.md  index.html  mcp.json  refresh_token.py  show-config-files.bat  sitemap.xml
backend/: .gitignore  GEMINI.md  README.md  auth.py  auth_utils.py  chatkit_api.py  database.py  embeddings.py  indexer.py  main.py  my_store.py  pyproject.toml  rag.py  simple_chatkit_api.py  test_all_modules.py  test_embeddings.py  test_gemini.py  test_integration.py  test_qwen_api.py  tree.txt  vector_store.py
backend/.specify/memory/: constitution.md
backend/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/configs/: __init__.py  config.py
backend/data/: embeddings.py  vector_store.py
backend/history/adr/: 001-reuse-model-configuration.md  002-group-test-files.md  003-backend-organization-structure.md  004-update-document-indexing-path.md  005-return-to-gemini-after-model-version-fix.adr.md
backend/history/prompts/001-backend-rag-pipeline/: 2-backend-rag-implementation-plan.plan.prompt.md  3-backend-rag-implementation.green.prompt.md
backend/models/: user_context.py
backend/services/: chatkit_service.py  indexer.py  rag.py
backend/simple_agents/: __init__.py  aagents.py
backend/specs/001-backend-rag-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/specs/001-backend-rag-pipeline/checklists/: requirements.md
backend/tests/: test_all_modules.py  test_embeddings.py  test_gemini_keys.py  test_integration.py  test_keys.py
(+337 files in other folders)
